# devops

./: .gitignore
benchmark/: Makefile  README.md  dash.sh  dashboard.json
benchmark/1-test/: 0-go-client-deployment.yaml  1-python-client-deployment.yaml  2-rust-client-deployment.yaml
benchmark/2-test/: 0-go-client-deployment.yaml  1-python-client-deployment.yaml  2-rust-client-deployment.yaml
benchmark/client/: Dockerfile  go.mod  main.go
benchmark/deployment/go-app/: 1-app-deployment.yaml
benchmark/deployment/python-app/: 1-app-deployment.yaml  2-app-service.yaml  3-app-pod-monitor.yaml
benchmark/deployment/rust-app/: 1-app-deployment.yaml  2-app-service.yaml  3-app-pod-monitor.yaml  4-client-pod-monitor.yaml
benchmark/go-app/: Dockerfile  config.go  config.yaml  devices.go  go.mod  go.sum  handler.go  images.go  main.go  metrics.go  tracing.go
benchmark/python-app/: .dockerignore  Dockerfile  app.py  config.py  config.yaml  devices.py  images.py  pyproject.toml  tracing.py
benchmark/rust-app/: Cargo.toml  Dockerfile
benchmark/rust-app/src/: devices.rs  images.rs  main.rs  otlp.rs
benchmark/terraform/: 2-prometheus.tf  3-grafana.tf  4-tempo.tf
benchmark/terraform/values/: grafana.yaml  tempo.yaml
